# gestor_cursos_django

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyup.yml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: projeto_django.yml
contrib/: env-sample
pypro/: settings.py  urls.py
pypro/aperitivos/: admin.py  models.py  tests.py  urls.py  views.py
pypro/aperitivos/migrations/: 0001_initial.py  0002_video_creation.py  0003_alter_video_slug.py
pypro/aperitivos/templates/aperitivos/: indice.html  video.html
pypro/aperitivos/tests/: test_indices.py  test_videos.py
pypro/base/: admin.py  models.py  urls.py  views.py
pypro/base/migrations/: 0001_initial.py  0002_auto_20210723_1419.py
pypro/base/static/css/: style.css
pypro/base/templates/base/: base.html  footer.html  home.html
pypro/base/tests/: test_home.py  test_sentry.py
pypro/config/: cloudinary_strategy.py
pypro/modulos/: admin.py  facade.py  models.py  urls.py  views.py
pypro/modulos/migrations/: 0001_initial.py  0002_modulo_slug.py  0003_populando_slug.py  0004_campos_unicos_e_nao_nulos.py
pypro/modulos/templates/modulos/: modulo_detalhe.html
pypro/modulos/tests/: test_aba_de_modulos.py  test_facade.py  test_modulo_detalhe.py
