[tool.poetry]
name = "Gestor de Cursos"
version = "0.1.0"
description = "Sistema de gestao de cursos, possibilitando cadastro de usuuários"
authors = ["wfoschiera <wfoschiera@gmail.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8.10"
Django = "^3.2.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
codecov = "^2.1.11"
pytest-django = "^4.3.0"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
