[tool.poetry]
name = "Gestor de Cursos"
version = "0.1.0"
description = "Sistema de gestao de cursos, possibilitando cadastro de usuuários"
authors = ["wfoschiera <wfoschiera@gmail.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
gunicorn = "^20.1.0"
python-decouple = "^3.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
cloudinary = "^1.25.0"
django-cloudinary-storage = "^0.3.0"
Collectfast = "^2.2.0"
django-debug-toolbar = "^3.2.1"
sentry-sdk = "^1.1.0"
pre-commit = "^2.13.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
codecov = "^2.1.11"
pytest-django = "^4.3.0"
pytest-cov = "^2.12.0"
model-bakery = "^1.3.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | migrations/
  | _build
  | buck-out
  | build
  | dist
)/
'''